--- a/toupletown/templates/weather/main.html
+++ b/toupletown/templates/weather/main.html
@@ -1,1 +1,1 @@
-<h1>{{city_weather.current.temp_c}}</h1>
+<h1>in {{city_weather.location.name}}, {{city_weather.location.country}} now {{city_weather.current.temp_c}} degree</h1>
